# Clinical-AI-Monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: morning_digest.yml
src/: ai_agents.py  database.py  email_reporter.py  feedback_handler.py  fetch_pubmed.py  main_pipeline.py  rag_assistant.py  vector_store.py
