[project]
name = "clinical-ai-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu",  # <--- Changed this line!
    "numpy==2.4.4",
    "protobuf==7.34.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sentence_transformers==5.3.0",
    "sqlalchemy==2.0.25",
    "google-genai==1.46.0"
]